plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'com.epages.restdocs-api-spec' version '0.18.2'
}

group = 'com.growup'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    jwtVersion = '0.12.6'
    queryDslVersion = '5.0.0'
    snippetsDir = file("build/generated-snippets")
}

dependencies {
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Spring Boot Starter
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // JWT
    compileOnly "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    // Database
    runtimeOnly 'com.h2database:h2:2.2.224'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mariadb'
    testImplementation 'com.redis:testcontainers-redis:2.2.2'
    // REST Docs & Swagger UI
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    testImplementation 'io.rest-assured:rest-assured:5.4.0'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
    implementation 'club.minnced:discord-webhooks:0.8.4'
    // Prometheus
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus:1.13.3'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
    finalizedBy 'jacocoTestReport'
}

jacoco {
    reportsDirectory = layout.projectDirectory.dir('.qodana/code-coverage')
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = false
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Request.class',
                    '**/*Response.class',
                    '**/*Command.class',
                    '**/*Dto.class',
                    '**/*Exception.class',
                    '**/*Config.class',
                    '**/*Application.class',
            ])
        }))
    }
    finalizedBy 'openapi3'
}

openapi3 {
    server = 'http://localhost:8080'
    title = 'GU-99 API'
    description = 'GU-99 API 명세 페이지입니다.'
    version = '0.0.1'
    outputDirectory = 'src/main/resources/static/docs'
    tagDescriptionsPropertiesFile = 'src/docs/tag-descriptions.yaml'
    format = 'yaml'
}

compileJava {
    options.compilerArgs << '-Aquerydsl.generatedAnnotationClass=com.querydsl.core.annotations.Generated'
}
